# MonkeyTyperGame

./: README.md
MonkeyTyper/: AfterGameState.cpp  BackupGame.cpp  BackupGame.h  CMakeLists.txt  DifficultyState.cpp  ExitMenuState.cpp  FontState.cpp  GameplayState.cpp  GeneralSettings.cpp  GeneralSettings.h  MenuState.cpp  ScoreBoard.cpp  ScoreBoard.h  SettingsScreen.h  StartScreen.cpp  main.cpp
MonkeyTyper-assets/MyWords/: Easy  Hard  Medium
MonkeyTyper-assets/SavedGame/: Settings  WordsVector
